--- a/js/index.html
+++ b/js/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>HTML 5 Boilerplate</title>
-		<link rel="stylesheet" href="base.css">
+		<title>Random Names Generator</title>
+		<link rel="stylesheet" href="/base.css">
 		<script src="index.js"></script>
 	</head>
 	<body class="container" onload="generateRandomName('ansRandomName');">
