--- a/js/index.html
+++ b/js/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Random Names Generator</title>
-    <link rel="stylesheet" href="/base.css" />
+    <link rel="stylesheet" href="https://files.grujo.ch/base.css" />
     <script src="index.js" defer></script>
   </head>
   <body class="container">
